@@ -10,7 +10,8 @@ class UserSessionsController < ApplicationController
 
   def auth
     redirect_to client.auth_code.authorize_url({
-      redirect_uri: callback_user_sessions_url
+      redirect_uri: callback_user_sessions_url,
+      state: params[:return_to]
     })
   end
 
@@ -21,7 +22,7 @@ class UserSessionsController < ApplicationController
     user = @user_session.authenticate(access_token: token)
 
     if user && sign_in(user)
-      redirect_to root_path
+      redirect_to (params[:state] || root_path)
     else
       @error = 'Invalid credentials'
       render :new
